Kubernetes/polybot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
  labels:
    app: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: polybot
        image: tamer153/polybot-k8s:1.0.0
        ports:
        - containerPort: 8443
        resources:
          requests:
            memory: "64Mi"
            cpu: "80m" # Updated to be smaller than 100m
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8443
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 5
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8443
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:  
  name: polybot-service
spec:
  selector:    
    app: polybot
  type: NodePort
  ports:  
  - name: http
    port: 8443
    targetPort: 8443
    nodePort: 8443
    protocol: TCP
