Kubernetes/yolo5.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5-deployment
  labels:
    app: yolo5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo5
  template:
    metadata:
      labels:
        app: yolo5
    spec:
      serviceAccountName: yolov5-sa
      terminationGracePeriodSeconds: 30
      containers:
      - name: yolo5
        image: tamer153/yolov5-k8s:1.0.14
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "512Mi"  # Increased memory request to 512Mi
            cpu: "200m"      # Increased CPU request to 200m
          limits:
            memory: "2048Mi" # Increased memory limit to 2048Mi
            cpu: "1000m"     # Increased CPU limit to 1000m"
        livenessProbe:
          httpGet:
            path: /liveness
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 5
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:  
  name: yolo5-service
spec:
  selector:    
    app: yolo5
  type: NodePort
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
