Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
      - tamer.atech-bot.click
      secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: tamer.atech-bot.click
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: polybot-service
              port:
                number: 8443
